Finished first index.html

--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,19 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>First Project</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+    <main class="main-container">
+        <div class="top-header"></div>
+        <div class="edge-bar-left"></div>
+        <div class="center-container">
+                <div class="bottom-footer"></div>
+        </div>
+        <div class="edge-bar-right"></div>
+
+    </main>
+</body>
+</html>
