Completed second assign

--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,23 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+    <main class="main-container">
+        <div class="top-container">
+            <div class="purple-rect"></div>
+            <div class="green-rect"></div>
+            <div class="blue-circle"></div>
+        </div>
+        <div class="mid-container">
+            <div class="shadow-box"></div>
+        </div>
+        <div class="bot-container">
+            <div class="greeting-text">HELLO<br>FRIENDS</div>
+        </div>
+    </main>
+</body>
+</html>
