--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,26 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <title>Third Project</title>
+    <link rel="stylesheet" href="./index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
+<body>
+    <main class="main-container">
+        <div class="grey-rect">
+            <div class="blue-square"></div>
+        </div>
+        <div class="white-rect">
+            <div class="info-text">Consider hiding the status bar—and all other app UI—while people are actively viewing full-screen media. 
+                If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap. Unless you have a compelling reason to do so, 
+                avoid definig a custom gesture to redisplay the status bar bevause users are unlikely to discover sucha gesture or to remember it.</div>
+        </div>
+        <div class="blue-rect"></div>
+        <div class="cyan-rect"></div>
+        <div class="lime-rect"></div>
+        <div class="yellow-rect"></div>
+
+    </main>
+</body>
+</html>
